Bug 110689 - remove CreateStartupUrl() since it's unneeded. r=jorgk